[package]
name = "catp"
version = "0.1.0"
edition = "2021"
description = "Print the output of a running process"
authors = ["Yujia Qiao <code@rapiz.me>"]
include = ["src/**/*", "LICENSE", "README.md", "build.rs"]
license = "GPL-3.0"
repository = "https://github.com/rapiz1/catp"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
nix = { version = "0.24.2", features = ["ptrace", "process"] }
anyhow = "1.0.58"
